[package]
name = "day11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = { workspace = true }
itertools = { workspace = true }
rstest = { workspace = true }
pathfinding = "4.4.0"

[dev-dependencies]
divan =  { workspace = true }

[[bench]]
name = "bench"
harness = false